🌱 jeorg-spring-flash-3-1 - 📚 - Testing init-method and destroy-method